# vmware

./: setup.cfg  setup.py
