[bdist_wheel]
universal = 1

[metadata]
name = ansible-collections-community.vmware
url = https://github.com/ansible-collections/vmware
project_urls =
  Bug Tracker = https://github.com/ansible-collections/vmware/issues
  Source Code = https://github.com/ansible-collections/vmware
description = Ansible Collection: community.vmware
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
keywords =
  ansible

[options]
zip_safe = False

install_requires =
  ansible
